# auth_shenanigans

./: Cargo.toml  README.md
contract-a/: Cargo.toml
contract-a/src/: lib.rs  test.rs
contract-b/: Cargo.toml
contract-b/src/: lib.rs  test.rs
