[workspace]
resolver = "2"

members = ["contract-a", "contract-b"]

[workspace.dependencies]
soroban-sdk = { version = "21.7.2" }
contract-a = { path = "contract-a" }
contract-b = { path = "contract-b" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
